@@ -6,20 +6,20 @@
     %table{ :border => 0, :width => 500, :cellpadding => 0, :cellspacing => 0 }
       %tr
         %td{ :valign => :top }
-          .label Company:
-          = f.text_field :company, :style => "width:240px"
-        %td= spacer
-        %td{ :valign => :top }
           .label Title:
           = f.text_field :title, :style => "width:240px"
+        %td= spacer
+        %td{ :valign => :top }
+          .label Company:
+          = f.text_field :company, :style => "width:240px"
       %tr
         %td{ :valign => :top }
           .label Email:
           = f.text_field :email, :style => "width:240px"
         %td= spacer
         %td{ :valign => :top }
-          .label Website:
-          = f.text_field :website, :style => "width:240px"
+          .label Alternative Email:
+          = f.text_field :alt_email, :style => "width:240px"
       %tr
         %td{ :valign => :top }
           .label Phone:
@@ -34,8 +34,8 @@
           = f.text_area :address, :style =>"width:240px", :rows => 4
         %td= spacer
         %td{ :valign => :top }
-          .label Fax:
-          = f.text_field :fax, :style => "width:240px"
+          .label Referred by:
+          = f.text_field :referred_by, :style => "width:240px"
           %div{:style => "margin-top:6px"}
             .check_box
               = f.check_box :do_not_call, {}, @lead.do_not_call
