@@ -1,27 +1,0 @@
-- logger.info Setting.lead_source.inspect
-.subtitle= link_to_function "Add More Information", %w/$("extra_intro").toggle(); $("extra").toggle()/
-.section
-  #extra_intro{ hidden_if(!@lead.errors.empty?) }
-    You can add more information later.
-  #extra{ hidden_if(@lead.errors.empty?) }
-    %table{ :border => 0, :width => 500, :cellpadding => 0, :cellspacing => 0 }
-      %tr
-        %td{ :valign => :top }
-          .label Status:
-          = f.select :source, Setting.lead_status.map { |s| [ s[1][:label], s[0] ] }, { :include_blank => true }, :style => "width:100%"
-        %td= spacer
-        %td{ :valign => :top }
-          .label Source:
-          = f.select :status, Setting.lead_source.map { |s| [ s.values.first, s.keys.first ] }, { :include_blank => true }, :style => "width:100%"
-      %tr
-        %td{ :valign => :top }
-          .label Referred by:
-          = f.text_field :referred_by, :style => "width:240px"
-        %td= spacer
-        %td{ :valign => :top }
-          .label Rating:
-          = f.text_field :rating, :style => "width:240px"
-      %tr
-        %td{ :valign => :top, :colspan => 3 }
-          .label Notes:
-          = f.text_area :notes, :style => "width:500px", :rows => 2
