@@ -1,0 +1,22 @@
+.subtitle= link_to_function "Add Web Presence Information", %w/$("presence_intro").toggle(); $("presence").toggle()/
+.section
+  #presence_intro{ hidden_if(!@lead.errors.empty?) }
+    You can add web presence information later.
+  #presence{ hidden_if(@lead.errors.empty?) }
+    %table{ :border => 0, :width => 500, :cellpadding => 0, :cellspacing => 0 }
+      %tr
+        %td{ :valign => :top }
+          .label Blog:
+          = f.text_field :blog, :style => "width:240px"
+        %td= spacer
+        %td{ :valign => :top }
+          .label Twitter:
+          = f.text_field :twitter, :style => "width:240px"
+      %tr
+        %td{ :valign => :top }
+          .label LinkedIn:
+          = f.text_field :linkedin, :style => "width:240px"
+        %td= spacer
+        %td{ :valign => :top }
+          .label FaceBook:
+          = f.text_field :facebook, :style => "width:240px"
