@@ -5,22 +5,24 @@ class CreateLeads < ActiveRecord::Migration
       t.references  :user
       t.references  :campaign
       t.integer     :assigned_to
-      t.string      :salutation,  :limit => 16
       t.string      :first_name,  :limit => 64, :null => false, :default => ""
       t.string      :last_name,   :limit => 64, :null => false, :default => ""
       t.string      :access,      :limit => 8, :default => "Private"
-      t.string      :company,     :limit => 64
       t.string      :title,       :limit => 64
+      t.string      :company,     :limit => 64
       t.string      :source,      :limit => 32
       t.string      :status,      :limit => 32
-      t.integer     :rating
       t.string      :referred_by, :limit => 64
-      t.string      :website,     :limit => 64
       t.string      :email,       :limit => 64
+      t.string      :alt_email,   :limit => 64
       t.string      :phone,       :limit => 32
       t.string      :mobile,      :limit => 32
-      t.string      :fax,         :limit => 32
+      t.string      :blog,        :limit => 128
+      t.string      :linkedin,    :limit => 128
+      t.string      :facebook,    :limit => 128
+      t.string      :twitter,     :limit => 128
       t.string      :address
+      t.integer     :rating,      :null => false, :default => 0
       t.boolean     :do_not_call, :null => false, :default => false
       t.text        :notes
       t.datetime    :deleted_at
