@@ -1,0 +1,44 @@
+.rating .stars {
+  width: 125px;
+  height: 25px;
+  float: left;
+  background: transparent url('../images/stars.gif') repeat-x right top;
+  margin-right: 5px;
+}
+
+.rating .clearer {
+  clear: left;
+}
+
+.rating .label {  
+  line-height: 16px;
+  font-size: 90%;
+}
+
+.rating .stars .star {
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+  background: transparent url('../images/stars.gif') no-repeat 0 0;
+  float: left;
+}	  
+
+.rating .stars .star.on {
+  background-position: 0 -25px;
+}
+
+.rating.selected .stars .star.on {
+  background-position: 0 -50px;
+}
+
+.rating .stars .star.on.half {
+  background-position: 0 -25px;
+  width: 12px;
+  margin-right: 12px;
+}
+
+.rating.selected .stars .star.on.half {
+  width: 25px;
+  margin-right: 0px;
+  background-position: 0 -50px;
+}
