@@ -8,22 +8,24 @@
 #  user_id     :integer(4)
 #  campaign_id :integer(4)
 #  assigned_to :integer(4)
-#  salutation  :string(16)
 #  first_name  :string(64)      default(""), not null
 #  last_name   :string(64)      default(""), not null
 #  access      :string(8)       default("Private")
-#  company     :string(64)
 #  title       :string(64)
+#  company     :string(64)
 #  source      :string(32)
 #  status      :string(32)
-#  rating      :integer(4)
 #  referred_by :string(64)
-#  website     :string(64)
 #  email       :string(64)
+#  alt_email   :string(64)
 #  phone       :string(32)
 #  mobile      :string(32)
-#  fax         :string(32)
+#  blog        :string(128)
+#  linkedin    :string(128)
+#  facebook    :string(128)
+#  twitter     :string(128)
 #  address     :string(255)
+#  rating      :integer(4)      default(0), not null
 #  do_not_call :boolean(1)      not null
 #  notes       :text
 #  deleted_at  :datetime
@@ -45,7 +47,6 @@ lead<%= i %>:
   user_id: <%= rand(5) + 1 %>
   campaign_id: <%= rand(5) + 1 %>
   assigned_to: <%= rand(5) + 1 %>
-  salutation: <%= Faker::Name.prefix if rand(10) < 5 %>
   first_name: <%= first_name = Faker::Name.first_name %>
   last_name: <%= last_name = Faker::Name.last_name %>
   access: Public
@@ -53,13 +54,13 @@ lead<%= i %>:
   title: <%= title[rand(title.size)] %>
   source: <%= source[rand(source.size)] %>
   status: <%= status[rand(status.size)] %>
-  rating: <%= rand(5) + 1 %>
+  rating: <%= rand(5) %>
   referred_by: <%= Faker::Name.first_name + " " + Faker::Name.last_name if rand(10) < 5 %>
-  website:
+  blog:
   email: <%= Faker::Internet.free_email.sub(/^.+?@/, "#{first_name}#{last_name.first}@".downcase) %>
+  alt_email: <%= Faker::Internet.free_email.sub(/^.+?@/, "#{first_name.first}#{rand(9999)}@".downcase) %>
   phone: <%= Faker::PhoneNumber.phone_number %>
   mobile: <%= Faker::PhoneNumber.phone_number %>
-  fax: <%= Faker::PhoneNumber.phone_number if rand(10) < 5 %>
   address: |
     <%= Faker::Address.street_address + " " + Faker::Address.secondary_address %>
     <%= Faker::Address.city + ", " + Faker::Address.us_state_abbr + " " + Faker::Address.zip_code %>
